@@ -462,7 +462,7 @@
 		<Product type="8002" id="0001" name="Plug-in Dimmer Module"/>
 		<Product type="4003" id="0001" name="Wall Dimmer Module"/>
 		<Product type="4002" id="0001" name="Wall Appliance Module"/>
-		<Product type="4004" id="0001" name="Wall Roller Shutter Module"/>
+		<Product type="4004" id="0001" name="Wall Roller Shutter Module" config="merten/50x5xx.xml"/>
 		<Product type="8001" id="8001" name="Receiver Flush-Mounted 1-Gang Switch"/>
 		<Product type="0003" id="0004" name="Transmitter Flush-Mounted 4-Gang Switch"/>
 		<Product type="0001" id="0002" name="Transmitter 1-Gang Switch"/>
